Fixed content jumping when image loads

--- a/style.css
+++ b/style.css
@@ -190,6 +190,18 @@ body {
     color: var(--color-accent-400);
 }
 
+.card__image {
+  position: relative;
+  width: 50%;
+  padding-bottom: 33.8%;
+}
+
+.card__image img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .selection-area {
     background-color: var(--color-primary-400);
     color: var(--color-accent-400);
